--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
             </style>
         </head>
         <body>
+            <noscript>
+                <p>This page requires JavaScript to enable theme toggling.</p>
+            </noscript>
             <header>
                 <nav>
                     <ul>
